--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,15 @@ spring.jpa.show-sql=true
 spring.servlet.multipart.max-file-size=10000MB
 spring.servlet.multipart.max-request-size=10000MB
 spring.jackson.serialization.fail-on-empty-beans=false
+spring.mail.host = smtp.gmail.com
+spring.mail.port = 587
+spring.mail.username = 45ytrasure@gmail.com
+spring.mail.password = 4ccec4f3359361
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
 
 
