--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.servlet.multipart.max-request-size=10000MB
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
-spring.mail.username = 45ytrasure@gmail.com
-spring.mail.password = 4ccec4f3359361
+spring.mail.username = mycinema88@gmail.com
+spring.mail.password = zaq12345678qaz
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
