--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/films?createDatabaseIfNotExist
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
-spring.servlet.multipart.max-file-size=10000MB
-spring.servlet.multipart.max-request-size=10000MB
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
